@@ -3,7 +3,7 @@ package com.shop.newsfeedservice.controller;
 import com.shop.newsfeedservice.client.UserClient;
 import com.shop.newsfeedservice.domain.Newsfeed;
 import com.shop.newsfeedservice.dto.common.ResponseDto;
-import com.shop.newsfeedservice.dto.response.NewsfeedResponse;
+import com.shop.newsfeedservice.dto.response.NewsfeedSearchResponse;
 import com.shop.newsfeedservice.service.NewsfeedService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -15,8 +15,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Tag(name = "Newsfeeds")
 @RestController
@@ -29,19 +27,18 @@ public class NewsfeedController {
 
     @Operation(summary = "뉴스피드 조회")
     @GetMapping("/me")
-    public ResponseDto<List<NewsfeedResponse>> searchNewsfeed(HttpServletRequest request) {
+    public ResponseDto<List<NewsfeedSearchResponse>> searchNewsfeed(HttpServletRequest request) {
         // token 유효여부 확인 및 유저 정보 조회
         String header = request.getHeader(HttpHeaders.AUTHORIZATION);
         Long principalId = userClient.getCurrentUser(header).getBody();
-        
+
         List<Newsfeed> newsfeeds = newsfeedService.searchNewsfeed(principalId);
 
-        List<NewsfeedResponse> newsfeedResponses = newsfeeds.stream()
-                .map(newsfeed -> newsfeedService.newsfeedDetails(newsfeed, principalId))
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        List<NewsfeedSearchResponse> newsfeedSearchRespons = newsfeeds.stream()
+                .map(newsfeed -> NewsfeedSearchResponse.of(newsfeed, principalId))
+                .toList();
 
-        return ResponseDto.success(newsfeedResponses);
+        return ResponseDto.success(newsfeedSearchRespons);
     }
 
 }
